--- a/assignment.html
+++ b/assignment.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Assignment #3</title>
 </head>
-<body>
-    <img src="map.jpg" alt="A computer" width="600"; height="250">
+<body style="font-size: 20px">
+    <div style="width: 90%; margin: auto;">
+        <img src="map.jpg" alt="A computer" width="750"; height="250"/>
+    </div>
+    <div style="width: 80%; margin: auto;">
     <h1>Travelling in Depression</h1>
     <p>When I was very little, I caught the travel bug. It started after my grandparents first brought <br>
         me to their home in France and I have now been to twenty-nine different countries. Each has <br> 
@@ -16,7 +19,7 @@
         At five, I marveled at the Eiffel Tower in the City of Lights. When I was eight, I stood in the <br> 
         heart of Piazza San Marco feeding hordes of pigeons, then glided down Venetian waterways <br>
         on sleek gondolas. At thirteen, I saw the ancient, megalithic structure of Stonehenge and <br>
-        <img src="girl.jpeg" alt="A girl" height="175"; width="125"; style="float: left;margin-right: 10px;"> 
+        <img src="girl.jpeg" alt="A girl" style="width: 20%; float:left; margin: 10px;"> 
         walked along the Great Wall of China, amazed that the <br>
         thousand-year-old stones were still in place. <br>
         It was through exploring cultures around the world that I first <br>
@@ -38,77 +41,86 @@
         fire and Shān (山) meaning mountain can be joined to create Huǒshān (火山), which means <br>
         volcano. I love spending hours at a time practicing the characters and I can feel the beauty <br> 
         and rhythm as I form them.</p>
+    </div>
     <hr>
+<div style="width: 80%; margin: auto;">
     <h1>List of Items</h1>
     <ul type="square">
         <li>Item 1</li>
         <li>Item 2</li>
         <li>Item 3</li>
         <li>Item 4</li>
-        <ul type="circle">
-            <li>Sub-item 1</li>
-            <li>Sub-item 2</li>
-            <li>Sub-item 3</li>
-                <ul type="square">
-                    <li>Sub-sub-item 1</li>
-                    <li>Sub-sub-item 2</li>
-                    <li>Sub-sub-item 3</li>
-                        <ul type="disc">
-                            <li>Sub-sub-sub-item 1</li>
-                            <li>Sub-sub-sub-item 2</li>
-                            <li>Sub-sub-sub-item 3</li>
-                            <li>Sub-sub-sub-item 4</li>
+            <ul type="circle">
+                <li>Sub-item 1</li>
+                <li>Sub-item 2</li>
+                <li>Sub-item 3</li>
+                    <ul type="square">
+                       <li>Sub-sub-item 1</li>
+                       <li>Sub-sub-item 2</li>
+                       <li>Sub-sub-item 3</li>
+                           <ul type="disc">
+                               <li>Sub-sub-sub-item 1</li>
+                               <li>Sub-sub-sub-item 2</li>
+                               <li>Sub-sub-sub-item 3</li>
+                               <li>Sub-sub-sub-item 4</li>
                         </ul>
-                    <li>Sub-sub-item4</li>  
+                       <li>Sub-subitem 4</li>  
                 </ul>    
-            <li>Sub-item 4</li> 
+                <li>Sub-item 4</li> 
         </ul>  
         <li>Item 5</li>       
         <li>Item 6</li>   
                 </ul>
+
 <hr>    
-<div style="margin-left: auto;">
-<h1>Aircraft Types</h1>  
-<ul type="disc">
-    <li>General Aviation (Piston-driven engines)</li>
-</ul>  
- <ol type="1">
-             <li>Single-Engine Aircraft</li>
- 
-            <ol type="I">
-                <li>Tail wheel</li>
-                 
-            <li>Tricycle</li> 
-<li>Dual-Engine Aircraft</li> 
-<ol tupe="A">
-    <LI>Wing-mounted engines</LI>
-    <LI>Push-pull fuselage-mounted engines</LI>
-</ol> 
-<ul type="dosc">
-<li>Commercial Aviation (jet engines)</li> 
-</ul>
+<h2>Aircraft Types</h2>  
+<ul>
+        <li>
+          General Aviation (Piston-driven engines
+          <ol>
+            <li>Single-Engine Aircraft
+                <ol type="I">
+                   <li>Tail wheel</li>
+                   <li>Tricycle</li> 
+                </ol>
+            </li>
+             <li>Dual-Engine Aircraft</li> 
+                  <ol tupe="A">
+                     <LI>Wing-mounted engines</LI>
+                     <LI>Push-pull fuselage-mounted engines</LI>
+                  </ol> 
+                </li>
+              </ol>
+            </li>  
+              <ul type="dosc">
+        <li>Commercial Aviation (jet engines)</li> 
+              </ul>
 <ol type="1">
-<li>Dual-Engine</li>
+    <li>Dual-Engine</li>
         <ol type="a">
-    <li>Wing-mounted engines</li>
-    <li>Fuselage-mounted engines</li>
-<li>Tri-Engine</li>    
-<ol type="i">
-    <li>Third engine in vertical stabilizer</li>
-    <li>Third engine in fuselage</li>
-</ol>
-<b>Instructions </b> <br>
+            <li>Wing-mounted engines</li>
+            <li>Fuselage-mounted engines</li>
+        </ol>    
+    <li>Tri-Engine</li> 
+</ol>       
+            <ol type="i">
+                <li>Third engine in vertical stabilizer</li>
+                <li>Third engine in fuselage</li>
+            </ol>
+<br>
+<b>Instructions</b>
+<br>
 Develop an HTML document that looks exactly like the sample above, considering the 
 below bullet points.
 <ul type="disc">
-    <li>Include at least three (3) meta tags</li>
-    <li>Include comments in your code</li>
-    <li>Properly include all headings</li>
-    <li>Properly include all paragraphs</li>
-    <li>Include appropriate attributes if necessary</li>
-    <li>Properly add HTML Images as seen above</li>
-    <li>Ensure that each list item is properly marked/numbered with the rightful type 
-        attribute value </li>
+<li>Include at least three (3) meta tags</li>
+<li>Include comments in your code</li>
+<li>Properly include all headings</li>
+<li>Properly include all paragraphs</li>
+<li>Include appropriate attributes if necessary</li>
+<li>Properly add HTML Images as seen above</li>
+<li>Ensure that each list item is properly marked/numbered with the rightful type 
+    attribute value </li>
     </div>        
 </ul>
 </body>
